Revert the heap calculation logic, to be considered in future
Signed-off-by: Saad Khan <saakhan@ibm.com>